CryptoTrader/data_utils/twitter_data/nohup.out
  File "downloader.py", line 3
    %load_ext autoreload
    ^
SyntaxError: invalid syntax
